# universe-viral-radar-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: test.yml
examples/: benchmark-score-input.json  manual-video-evidence.json
profiles/: creator-profile.template.json
references/: creator-analysis.md  evidence-rules.md  monetization-path.md  personalized-script.md  prepublish-check.md  video-breakdown.md  viral-structure.md
references/prepublish/: common-checklist.md  douyin-checklist.md  wechat-channels-checklist.md  xiaohongshu-checklist.md
schemas/: analysis-output.schema.json  creator-profile.schema.json  video-evidence.schema.json
scripts/: push_to_github.ps1  push_to_github.sh  viral_radar.py
src/universe_viral_radar/: __init__.py  cli.py  context_builder.py  doctor.py  prepublish.py  profile.py  redbook_adapter.py  scoring.py  utils.py  video_adapter.py
tests/: test_prepublish.py  test_profile.py  test_scoring.py  test_utils.py
